add download and upload server

--- a/storage/app/templates/index.html
+++ b/storage/app/templates/index.html
@@ -21,6 +21,8 @@
                 <button type="submit" style="background:none;border:none;color:blue;text-decoration:underline;cursor:pointer;">Download Base Team</button>
             </form>
         </li>
+        <li><a href="/uploadServerUi">Upload Server</a></li>
+        <li><a href="/downloadServerUi">Download Server</a></li>
     </ul>
 </body>
 </html>
